--ignoreSymLinks and --ignoreReparsePoints Feature